force-app/main/default/objects/Interview__c/fields/Interview_Format__c.field-meta.xml
<CustomField>
    <fullName>Interview_Format__c</fullName>
    <label>Interview Format</label>
    <length>15</length>
    <type>Text</type>
</CustomField>