force-app/main/default/objects/Interview__c/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <label>Interview Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>