force-app/main/default/objects/Interview__c/fields/InterviewDate__c.field-meta.xml
<CustomField>
    <fullName>InterviewDate__c</fullName>
    <label>Interview Date</label>
    <type>Date</type>
</CustomField>