force-app/main/default/objects/Interview__c/fields/Job_Application__c.field-meta.xml
<CustomField>
    <fullName>Job_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Application</label>
    <referenceTo>Job_Applications__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>