force-app/main/default/objects/Interview__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <label>User Email</label>
    <type>Email</type>
</CustomField>